Register & login user

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DEV_BACKEND_URL=somethig
-PROD_BACKEND_URL=soem
+DEV_BACKEND_URL=https://58be-102-85-230-207.ngrok-free.app/api
+PROD_BACKEND_URL=https://58be-102-85-230-207.ngrok-free.app/api
