--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DEV_BACKEND_URL=https://58be-102-85-230-207.ngrok-free.app/api
-PROD_BACKEND_URL=https://58be-102-85-230-207.ngrok-free.app/api
+DEV_BACKEND_URL=https://8d9d-102-85-138-108.ngrok-free.app/api
+PROD_BACKEND_URL=https://8d9d-102-85-138-108.ngrok-free.app/api
