Get contacts from djanorestframework

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DEV_BACKEND_URL=https://8d9d-102-85-138-108.ngrok-free.app/api
-PROD_BACKEND_URL=https://8d9d-102-85-138-108.ngrok-free.app/api
+DEV_BACKEND_URL=https://ff6b-197-239-10-25.ngrok-free.app/api
+PROD_BACKEND_URL=https://ff6b-197-239-10-25.ngrok-free.app/api
